<resources>
    <string name="app_name" translatable="false">CineHub</string>
    <string name="title_home" translatable="false">CineHub</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_favorite">Your\'s Favorite</string>
    <string name="title_coming_soon">Coming Soon</string>
    <string name="title_shake" translatable="false">SHAKE!</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_show_all"><u>Show all</u></string>
    <string name="title_actor_card">Actor card</string>
    <string name="title_director_card">Director card</string>
    <string name="birth_date">Birth date:</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="day_of_death">Day of death:</string>
    <string name="gender">Gender:</string>
    <string name="known_for">Known for:</string>
    <string name="action_settings">Settings</string>
    <string name="shake_description">Shake your phone and we will sugget you a movie!</string>
    <string name="title_film">Movie title</string>
    <string name="shake_2_description">Shake your phone again to make you suggest another movie!</string>
    <string name="title_movie_card">Movie card</string>
    <string name="action_search">Search</string>
    <string name="API_LANGUAGE">en-EN</string>
    <string name="Director">Director:</string>
    <string name="Writers">Screenwriters:</string>
    <string name="Runtime">Runtime:</string>
    <string name="Adult">Adult only</string>
    <string name="ReleaseDate">Release Date:</string>
    <string name="Rating">Rating:</string>
    <string name="Genres">Genres:</string>
    <string name="Revenue">Revenue:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="people_card">People card</string>
    <string name="actors_title">Actors</string>
    <string name="displayTitleSettings">Display</string>
    <string name="security_title">Security</string>
    <string name="information_title">Information</string>
    <string name="dark_theme_label">Dark Theme</string>
    <string name="parental_control_label">Parental Control</string>
    <string name="faq_text">F.A.Q.</string>
    <string name="git_hub_text">Git Hub</string>
    <string name="credits_text">Credits</string>
    <string name="version_n_text">Version n:</string>
    <string name="error_message_movie">"Impossible to load movies "</string>
    <string name="error_message_people">Impossible to load people</string>
    <string name="anno_di_uscita_opzionale">Release year (Optional)</string>
    <string name="searchError">You must compile search textBox</string>
    <string name="view_results">View results</string>
    <string name="Categories">Categories (Optional)</string>
    <string name="release_year">Release year (Optional)</string>
    <string name="SearchResult">SearchResult</string>
    <string name="movie">Movie</string>
    <string name="people">People</string>
    <string name="select_region">Select your country</string>
    <string name="italy">Italy</string>
    <string name="united_states">United States</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="search_hint">Search for people or movies</string>
    <string name="error_message_shake2">None movie founded</string>
    <string name="empty_favorite">To add movie to \"Your\'s Favorite\" click on the button</string>
    <string name="error_message_trailer">Trailer not available</string>
    <string name="empty_favorite_2">in the Movie Card</string>
    <string name="crew">Crew</string>
    <string name="filmography">Filmography</string>
</resources>
