<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shake2.Shake2Fragment"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/film_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/title_shake"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/text_film_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_film"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="@+id/film_image_button"
            app:layout_constraintStart_toStartOf="@+id/film_image_button"
            app:layout_constraintTop_toBottomOf="@+id/film_image_button" />

        <TextView
            android:id="@+id/shake_2_description"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="@string/shake_2_description"
            android:textColor="@color/paragraph_color"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintEnd_toEndOf="@+id/text_film_name"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@+id/text_film_name"
            app:layout_constraintTop_toBottomOf="@+id/text_film_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>