<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moviecard.MovieCardFragment"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <!--<TextView
            android:id="@+id/DirectorsValue"
            android:layout_width="@dimen/value_text_width"
            android:layout_height="wrap_content"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/DirectorLabel"
            app:layout_constraintTop_toBottomOf="@+id/DirectorLabel" />
-->
        <!--<TextView
            android:id="@+id/WritersValue"
            android:layout_width="@dimen/value_text_width"
            android:layout_height="wrap_content"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/WritersLabel"
            app:layout_constraintTop_toBottomOf="@+id/WritersLabel" />-->

        <TextView
            android:id="@+id/RuntimeValue"
            android:layout_width="@dimen/value_text_width"
            android:layout_height="wrap_content"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/RuntimeLabel"
            app:layout_constraintTop_toBottomOf="@+id/RuntimeLabel" />

        <TextView
            android:id="@+id/GenresValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_label"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/GenresLabel"
            app:layout_constraintTop_toBottomOf="@+id/GenresLabel" />

        <TextView
            android:id="@+id/ReleaseDateValue"
            android:layout_width="@dimen/value_text_width"
            android:layout_height="wrap_content"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/ReleaseDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/ReleaseDateLabel" />

        <TextView
            android:id="@+id/RevenueValue"
            android:layout_width="@dimen/value_text_width"
            android:layout_height="wrap_content"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/RevenueLabel"
            app:layout_constraintTop_toBottomOf="@+id/RevenueLabel" />

        <TextView
            android:id="@+id/film_text_title"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_film"
            android:textAlignment="textStart"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/film_image"
            app:layout_constraintStart_toStartOf="@+id/film_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/film_image"
            android:layout_width="@dimen/image_width_card"
            android:layout_height="@dimen/image_height_card"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/title_movie_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/film_text_title" />

        <ImageButton
            android:id="@+id/MovieCardFavouriteButton"
            android:layout_width="94dp"
            android:layout_height="70dp"
            android:layout_marginTop="4dp"

            android:layout_marginEnd="16dp"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/startplus_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<TextView
            android:id="@+id/DirectorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Director"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="241dp"
            tools:layout_editor_absoluteY="50dp" />

        <TextView
            android:id="@+id/WritersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/Writers"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/DirectorLabel"
            app:layout_constraintTop_toBottomOf="@+id/DirectorsValue" />
-->
        <TextView
            android:id="@+id/RuntimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/Runtime"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/film_image"
            app:layout_constraintTop_toTopOf="@+id/film_image" />

        <TextView
            android:id="@+id/GenresLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Genres"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/RuntimeLabel"
            app:layout_constraintTop_toBottomOf="@+id/RuntimeValue" />

        <TextView
            android:id="@+id/ReleaseDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ReleaseDate"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/GenresLabel"
            app:layout_constraintTop_toBottomOf="@+id/GenresValue" />

        <TextView
            android:id="@+id/RevenueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Revenue"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ReleaseDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/ReleaseDateValue" />

        <TextView
            android:id="@+id/AdultValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@android:string/unknownName"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/RevenueLabel"
            app:layout_constraintTop_toBottomOf="@+id/RevenueValue" />

        <TextView
            android:id="@+id/descriptionValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@android:string/unknownName"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/fl_youtube"
            app:layout_constraintTop_toBottomOf="@+id/fl_youtube" />

        <TextView
            android:id="@+id/RatingValue"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@android:string/unknownName"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toEndOf="@+id/RatingLabel"
            app:layout_constraintTop_toTopOf="@+id/RatingLabel" />

        <TextView
            android:id="@+id/RatingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Rating"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/film_image"
            app:layout_constraintTop_toBottomOf="@+id/film_image" />

        <FrameLayout
            android:id="@+id/fl_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RatingLabel" />

        <TextView
            android:id="@+id/actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/actors_title"
            android:textColor="@color/titleWhite"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/film_image"
            app:layout_constraintTop_toBottomOf="@+id/descriptionValue" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CreditsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="horizontal"
            app:layout_constraintStart_toStartOf="@id/actors"
            app:layout_constraintTop_toBottomOf="@id/actors"
            android:layout_marginStart="@dimen/horizontal_scroll_view_left_margin"
            android:layout_marginEnd="@dimen/horizontal_scroll_view_right_margin"/>

        <TextView
            android:id="@+id/crew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Crew"
            android:textColor="@color/titleWhite"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/CreditsRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/CreditsRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/CreditsCrewRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="horizontal"
            app:layout_constraintStart_toStartOf="@id/crew"
            app:layout_constraintTop_toBottomOf="@id/crew"
            android:layout_marginStart="@dimen/horizontal_scroll_view_left_margin"
            android:layout_marginEnd="@dimen/horizontal_scroll_view_right_margin"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>