<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingBottom="60dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.peoplecard.PeopleCardFragment">


        <ImageView
            android:id="@+id/people_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="@+id/people_name_title"
            app:layout_constraintTop_toBottomOf="@+id/people_name_title" />


        <TextView
            android:id="@+id/people_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/name_surname"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/birth_date"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/birth_date"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/gender"
            app:layout_constraintTop_toBottomOf="@+id/gender"
            android:textStyle="bold"
            android:textColor="@color/paragraph_color"/>

        <TextView
            android:id="@+id/birth_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_of_birth"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/death_date"
            app:layout_constraintTop_toBottomOf="@+id/death_date"
            android:textStyle="bold"
            android:textColor="@color/paragraph_color"/>

        <TextView
            android:id="@+id/death_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_of_death"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/birth_date"
            app:layout_constraintTop_toBottomOf="@+id/birth_date"
            android:textStyle="bold"
            android:textColor="@color/paragraph_color"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toStartOf="@+id/known_for"
            app:layout_constraintTop_toBottomOf="@+id/known_for"
            android:textStyle="bold"
            android:textColor="@color/paragraph_color"/>

        <TextView
            android:id="@+id/known_for"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/known_for"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintStart_toEndOf="@+id/people_image"
            app:layout_constraintTop_toBottomOf="@+id/people_name_title"
            android:textStyle="bold"
            android:textColor="@color/paragraph_color"/>

        <TextView
            android:id="@+id/people_description"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start|right|fill_horizontal|left|fill_vertical|end"
            android:text="@string/paragraph_example"
            android:textColor="@color/paragraph_color"
            android:textSize="@dimen/paragraph_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.564"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/people_image" />

        <TextView
            android:id="@+id/known_for_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="place_holder"
            app:layout_constraintStart_toEndOf="@+id/known_for"
            app:layout_constraintTop_toBottomOf="@+id/people_name_title"
            android:textColor="@color/value_color" />

        <TextView
            android:id="@+id/gender_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="place_holder"
            app:layout_constraintStart_toEndOf="@+id/gender"
            app:layout_constraintTop_toBottomOf="@+id/known_for_value"
            android:textColor="@color/value_color" />

        <TextView
            android:id="@+id/birth_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="place_holder"
            app:layout_constraintStart_toEndOf="@+id/birth_date"
            app:layout_constraintTop_toBottomOf="@+id/gender_value"
            android:textColor="@color/value_color"/>

        <TextView
            android:id="@+id/day_of_death_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="place_holder"
            app:layout_constraintStart_toEndOf="@+id/death_date"
            app:layout_constraintTop_toBottomOf="@+id/birth_date_value"
            android:textColor="@color/value_color"/>

        <TextView
            android:id="@+id/place_of_birth_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="place_holder"
            app:layout_constraintStart_toEndOf="@+id/birth_place"
            app:layout_constraintTop_toBottomOf="@+id/day_of_death_value"
            android:textColor="@color/value_color" />

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view_people_card"
            android:layout_width="409dp"
            android:layout_height="@dimen/horizontal_scroll_view_height"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filmography">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/image_button_1_people_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/app_name"/>

            <ImageButton
                android:id="@+id/image_button_2_people_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/app_name"/>

            <ImageButton
                android:id="@+id/image_button_3_people_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/app_name"/>

                <ImageButton
                android:id="@+id/image_button_4_people_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/app_name"/>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/filmography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Filmography"
            android:textColor="@color/titleWhite"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/people_description"
            app:layout_constraintTop_toBottomOf="@+id/people_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>